--- a/my-app/arcadeGame-master/index.html
+++ b/my-app/arcadeGame-master/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="public/gpublic/css/style.css">
 </head>
 <body>
-    <script src="js/resources.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+    <script src="public/gpublic/js/resources.js"></script>
+    <script src="public/gpublic/js/app.js"></script>
+    <script src="public/gpublic/js/engine.js"></script>
 </body>
 </html>
